--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.44.0",
     "nuxt": "^4.3.1",
     "nuxt-auth-utils": "^0.5.28",
+    "pdfmake": "^0.3.4",
     "postgres": "^3.4.5",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.28",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.15.1",
+    "@types/pdfmake": "^0.3.1",
     "drizzle-kit": "^0.31.0",
     "eslint": "^10.0.0",
     "typescript": "^5.9.3",
