--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ NUXT_OAUTH_GITHUB_CLIENT_ID=your-github-oauth-client-id
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=your-github-oauth-client-secret
 
 NUXT_ALLOWED_GITHUB_ID=your-github-user-id
+
+NUXT_SMTP_HOST=smtp.gmail.com
+NUXT_SMTP_PORT=587
+NUXT_SMTP_USER=samuelreichor@gmail.com
+NUXT_SMTP_PASS=xxxx-xxxx-xxxx-xxxx
+NUXT_SMTP_FROM=Samuel Reichör <samuelreichor@gmail.com>
