Add save to gdrive on send recipe

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ NUXT_SMTP_PORT=587
 NUXT_SMTP_USER=samuelreichor@gmail.com
 NUXT_SMTP_PASS=xxxx-xxxx-xxxx-xxxx
 NUXT_SMTP_FROM=Samuel Reichör <samuelreichor@gmail.com>
+
+NUXT_GOOGLE_DRIVE_FOLDER_ID=your-folder-id
+NUXT_GOOGLE_CLIENT_ID=your-google-oauth-client-id
+NUXT_GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
+NUXT_GOOGLE_REFRESH_TOKEN=your-google-refresh-token
