--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^14.2.1",
     "@vueuse/nuxt": "^14.2.1",
     "drizzle-orm": "^0.44.0",
+    "googleapis": "^171.4.0",
     "nodemailer": "^8.0.1",
     "nuxt": "^4.3.1",
     "nuxt-auth-utils": "^0.5.28",
