Add craft plugins to dashboard

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ NUXT_GOOGLE_DRIVE_FOLDER_ID=your-folder-id
 NUXT_GOOGLE_CLIENT_ID=your-google-oauth-client-id
 NUXT_GOOGLE_CLIENT_SECRET=your-google-oauth-client-secret
 NUXT_GOOGLE_REFRESH_TOKEN=your-google-refresh-token
+
+NUXT_CRAFT_CONSOLE_EMAIL=samuelreichor@gmail.com
+NUXT_CRAFT_CONSOLE_PASSWORD=
