--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/nuxt": "^14.2.1",
     "chart.js": "^4.5.1",
     "drizzle-orm": "^0.44.0",
+    "exceljs": "^4.4.0",
     "googleapis": "^171.4.0",
     "nodemailer": "^8.0.1",
     "nuxt": "^4.3.1",
